--- a/css/styles.css
+++ b/css/styles.css
@@ -184,7 +184,7 @@
 
 /* portfolio-section */
 
-.project-section{
+.portfolio-section{
     width: 100%;
     min-height: 100vh;
     padding: 150px 100px 100px;
@@ -194,7 +194,7 @@
     opacity: 0;
 }
 
-.project-heading{
+.portfolio-heading{
     font-size: 40px;
     text-transform: uppercase;
     text-align: center;
@@ -203,39 +203,13 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.project-container{
+.portfolio-container{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-gap: 100px;
 }
 
-.project-card{
-    height: 600px;
-    position:relative;
-}
-
-.project-img{
-    width:50%;
-    height: 30%;
-    position:absolute;
-    top: 0;
-    left: 0;
-    object-fit:cover;
-    transition: .5s;
-    border-radius:0px;
-
-}
-
-.project-content{
-    position:absolute;
-    padding: 40px;
-    color: rgb(3, 3, 3);
-    transition: .5s;
-    opacity:0.6;
-    
-}
-
-.project-title{
+.portfolio-title{
     font-size: 50px;
     text-transform: uppercase;
     text-align: center;
@@ -243,19 +217,12 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.project-info{
+.portfolio-info{
     margin: 40px;
     font-size: 20px;
     line-height: 30px;
     text-align: center;
 }
-
-.project-btn-grp{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 20px;
-}
-
 
 
 /* Contact Us-section */     
@@ -341,6 +308,7 @@
 .home.active,
 .project-section.active,
 .about-us.about-us,
+.portfolio-section.active,
 .contact-section.active,
 .footer.active{
     position: relative;
