--- a/css/styles.css
+++ b/css/styles.css
@@ -15,9 +15,14 @@
     
 }
 
-
-
  /* Home-section */
+
+ .logo{
+     display:block;
+     margin-left: auto;
+     margin-right: auto;
+     width: 50%;
+ }
 
  .home{
     margin: 0;
@@ -191,26 +196,43 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.portfolio-container{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 100px;
-}
-
-.portfolio-title{
-    font-size: 50px;
-    text-transform: uppercase;
-    text-align: center;
-    font-weight: 300;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.portfolio-info{
-    margin: 40px;
+.container {
+    position: relative;
+    width: 50%;
+  }
+  
+  .image {
+    display: block;
+    width: 50%;
+    height: auto;
+  }
+  
+  .overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 50%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #ffffff;
+  }
+  
+  .container:hover .overlay {
+    opacity: 0.6;
+  }
+  
+  .text {
+    color: rgb(2, 2, 2);
     font-size: 20px;
-    line-height: 30px;
-    text-align: center;
-}
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+  }
 
 
 /* Contact Us-section */     
