--- a/css/styles.css
+++ b/css/styles.css
@@ -202,9 +202,7 @@
   }
   
   .image {
-    display: block;
-    width: 50%;
-    height: auto;
+    
   }
   
   .overlay {
@@ -213,7 +211,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    height: 100%;
+    height:fit-content;
     width: 50%;
     opacity: 0;
     transition: .5s ease;
@@ -233,7 +231,26 @@
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
   }
-
+  div.gallery {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 180px;
+  }
+  
+  div.gallery:hover {
+    border: 1px solid #777;
+  }
+  
+  div.gallery img {
+    width: 100%;
+    height: auto;
+  }
+  
+  div.desc {
+    padding: 15px;
+    text-align: center;
+  }
 
 /* Contact Us-section */     
 .contact-section{
