--- a/css/styles.css
+++ b/css/styles.css
@@ -120,58 +120,70 @@
     color: #050505;
     font-family: Arial, Helvetica, sans-serif;
 }
-
-.project-container{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 100px;
-}
-
-.project-card{
-    height: 400px;
-    position:relative;
-}
-
-.project-img{
-    width:50%;
-    height: 30%;
-    position:absolute;
-    top: 0;
-    left: 0;
-    object-fit:cover;
-    transition: .5s;
-    border-radius:0px;
-
-}
-
-.project-content{
-    position:absolute;
-    padding: 40px;
-    color: rgb(3, 3, 3);
-    transition: .5s;
-    opacity:0.6;
-    
-}
-
-.project-title{
-    font-size: 50px;
+.project-sub-heading{
+    font-size: 20px;
     text-transform: uppercase;
     text-align: center;
-    font-weight: 300;
+    margin-bottom: 50px;
+    color: #050505;
     font-family: Arial, Helvetica, sans-serif;
 }
-
-.project-info{
-    margin: 40px;
-    font-size: 20px;
-    line-height: 30px;
-    text-align: center;
+.project-container{
+    position: relative;
+    width: 100%;
+}
+  
+.project-overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height:auto;
+    width:auto;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #ffffff;
+}
+  
+.project-container:hover .project-overlay {
+    opacity: 1;
+}
+  
+.project-text {
+    color: rgb(8, 8, 8);
+    font-size: 15px;
+    position:relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
 }
 
-.project-btn-grp{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 20px;
+
+  /*Gallery*/
+.project-gallery {
+    margin: 5px;
+    float:left;
+    width: 30%;
+  margin-left: auto;
+     
+   
+}
+  
+.project-gallery:hover {
+    border: 1px solid rgb(255, 251, 251);
+}
+  
+.project-gallery img {
+    width: auto;
+    height: auto;
+    
+}
+  
+.project-desc {
+    padding: 10px;
+    text-align: center;
 }
 
 /* portfolio-section */
@@ -199,8 +211,6 @@
     position: relative;
     width: 100%;
 }
-  
-
   
 .overlay {
     position: absolute;
